# gcli2api

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.json.example  go.mod  go.sum  main.go  pyproject.toml  render-start.sh
.github/workflows/: nightly-release.yml
internal/auth/: auth.go  auth_test.go
internal/codeassist/: client.go  client_test.go  multiclient.go  multiclient_test.go
internal/config/: config.go  config_test.go
internal/gemini/: models.go  normalize.go  normalize_test.go  types.go
internal/httpx/: httpx.go  httpx_test.go
internal/server/: middleware.go  server.go  server_test.go
internal/state/: state.go
internal/utils/: utils.go
scripts/: __init__.py  release.py
