[project]
name = "gcli2api-release"
version = "0.1.0"
description = "Release automation scripts for gcli2api"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.uv]
dev-dependencies = []
